# intellifill-ocr

./: .gitignore  README.md  build.ps1  pyproject.toml  requirements.txt
.github/workflows/: release.yml  winui-packages.yml
demo/: create_demo_files.py  source_invoice.csv  template_invoice.csv
installer/: IntelliFillOCR.iss  IntelliFillOCR.nsi  prerequisites.txt
msix/: AppxManifest.template.xml  build-msix.ps1  create-offline-package.ps1  install-msix.ps1  offline-package-readme.txt
packaging/PortableInstaller/: IntelliFillOCR.PortableInstaller.csproj  Program.cs
pyinstaller/: IntelliFillOCR.spec  IntelliFillOCRBackend.spec
scripts/: build-avalonia.ps1  build-installer.ps1  build-winui.ps1  package-linux.sh  package-nsis.ps1  package-portable-exe.ps1  package-release.ps1  package-winui.ps1  set-release-version.ps1
src/IntelliFillOCR.Avalonia/: App.axaml  App.axaml.cs  IntelliFillOCR.Avalonia.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs
src/IntelliFillOCR.Core/: DocumentServices.cs  IntelliFillOCR.Core.csproj  OutputServices.cs
src/intellifill_ocr/: __init__.py  backend_main.py  main.py
src/intellifill_ocr/database/: models.py  repository.py
src/intellifill_ocr/ipc/: __init__.py  backend.py  serialization.py  server.py
src/intellifill_ocr/models/: document.py  template.py
src/intellifill_ocr/ocr/: engine.py  pdf.py  preprocess.py  table_detection.py
winui/: README.md
winui/IntelliFillOCR.WinUI/: App.xaml  App.xaml.cs  IntelliFillOCR.WinUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest
(+41 files in other folders)
